# claude-skills

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: skills-ci.yml
docs/: CONSUMER-GUIDE.md  GUIA-AUTOR.md  GUIA-CONSUMIDOR.md  NOTIFICATIONS-SETUP.md  catalog.html  skillhub-explainer.html  skillhub-guia.html
plugins/vec-skills/.claude-plugin/: plugin.json
plugins/vec-skills/skills/meeting-summarizer/: SKILL.md
plugins/vec-skills/skills/pdf-reader/: SKILL.md
plugins/vec-skills/skills/revisor-pt/: SKILL.md
plugins/vec-skills/skills/text-reviewer/: SKILL.md
plugins/vec-skills/skills/vec-example/: SKILL.md
registry/: registry.json
scripts/: bootstrap-autor.ps1  bootstrap-autor.sh  onboard.ps1
skillhub/: __init__.py  cli.py  core.py
skills/exemplo-vec/: CHANGELOG.md  SKILL.md  skill.yaml
skills/exemplo-vec/tests/: smoke.md
skills/meeting-summarizer/: CHANGELOG.md  skill.yaml
skills/meeting-summarizer/tests/: smoke.md
skills/pdf-reader/: CHANGELOG.md  skill.yaml
skills/pdf-reader/tests/: smoke.md
skills/pt-en-translator/: CHANGELOG.md  SKILL.md  skill.yaml
skills/pt-en-translator/tests/: smoke.md
skills/revisor-pt/: CHANGELOG.md  skill.yaml
skills/revisor-pt/tests/: smoke.md
skills/teste-autoupdate/: CHANGELOG.md  SKILL.md  skill.yaml
skills/teste-autoupdate/tests/: smoke.md
skills/text-reviewer/: CHANGELOG.md  skill.yaml
skills/text-reviewer/tests/: smoke.md
skills/vec-example/: CHANGELOG.md  SKILL.md  skill.yaml
skills/vec-example/tests/: smoke.md
