[project]
name = "skillhub"
version = "1.0.0"
description = "SkillHub - gerenciador de skills do Claude Code da VEC (CLI + registry + CI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
skill = "skillhub.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skillhub*"]
